--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
 
 @layer components {
   .content {
-    @apply h-full flex flex-col gap-4 sm:gap-6 lg:gap-10 overflow-y-scroll p-4 sm:p-6 lg:p-10;
+    @apply h-full flex flex-col gap-6 lg:gap-10 overflow-y-scroll p-4 sm:p-6 lg:p-10;
   }
 
   .daddj-texts {
@@ -85,7 +85,13 @@
 
   #daddj-pagination > .active { @apply
     bg-daddj-700
-    text-neutral-50;
+    text-neutral-50
+    pointer-events-none;
+  }
+
+  #daddj-pagination > .disabled { @apply
+    opacity-25
+    pointer-events-none;
   }
 
   .hover-up {
